tests/negative/neg_own_double_move.safe
-- Test: neg_own_double_move
-- Description: Moving an access value that has already been moved.
--   After the first move, Source is null/moved. The second move
--   attempts to transfer ownership from a moved variable.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96c:0b45de01
-- Expected: REJECT double_move

package double_move_test

   type payload is range 0 to 100;
   type payload_ptr is access payload;

   --  Double_Move: moves Source twice.
   function double_move
      source  : payload_ptr = new (42 as payload);
      target1 : payload_ptr = null;
      target2 : payload_ptr = null;

      target1 = source;
      --  Source is now null (moved).
      target2 = source;  -- ERROR: Source has already been moved

